# rplidar_3d

./: CMakeLists.txt  README.md  package.xml
embedded/dev/: Makefile  attitude.c  calibrate_imu.c  calibrate_sensor.c  canBusProcess.c  chassis.c  chconf.h  dbus.c  flash.c  halconf.h  imu_temp.c  main.c  mcuconf.h  mpu6050.c  params.c  shellcfg.c  stepper.c  tft_display.c  uart_host.c
embedded/dev/.dep/: attitude.o.d  board.o.d  calibrate_imu.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chprintf.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chstats.o.d  chsys.o.d  chthreads.o.d  chtm.o.d  chvt.o.d  crt1.o.d  evtimer.o.d  flash.o.d  hal.o.d  hal_buffers.o.d  hal_lld.o.d  hal_mmcsd.o.d  hal_queues.o.d  i2c.o.d  i2c_lld.o.d  lidar_uart.o.d  main.o.d  math_misc.o.d  memstreams.o.d  mpu6050.o.d  (+19 more)
embedded/dev/inc/: attitude.h  calibrate_imu.h  calibrate_sensor.h  canBusProcess.h  chassis.h  main.h  math_misc.h  mpu6050.h  mpu6050.h.gch  (+4 more)
embedded/hw/: board.h
include/: PCL2Generator.h  icp_node.h  math_utility.h
launch/: 3d_rplidar.launch  rplidar.launch  test_frame.launch  test_rplidar.launch  view_rplidar.launch
rviz/: rplidar.rviz
sdk/include/: rplidar_cmd.h  rplidar_driver.h  rplidar_driver.h.gch  stm32_serial.h
sdk/src/: rplidar_driver.cpp  rplidar_driver_serial.h  stm32_serial.cpp
src/: PCL2Generator.cpp  icp_node.cpp  laserScanGenerator.cpp  lidar_node.cpp  node.cpp  stm32_client.cpp  stm32_controller.cpp  stm32_node.cpp  test.cpp
srv/: stm32_cmd.srv
(+3 files in other folders)
